--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [
+      "googlemaps"
+
+    ]
   },
   "files": [
     "src/main.ts",
@@ -12,3 +15,4 @@
     "src/**/*.d.ts"
   ]
 }
+
