--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,12 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
+    "noImplicitAny": false,
     "module": "esnext",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es2015",
     "typeRoots": [
